voting-app/result-ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: vote
  namespace: vote
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
    - host: result.matrix
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: result
                port:
                  number: 5001
