voting-app/vote-ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: vote
  namespace: vote
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
    - host: vote.matrix
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vote
                port:
                  number: 5000
